[project]
name = "facepalm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "databases[aiosqlite,asyncpg]>=0.9.0",
    "dotenv>=0.9.9",
    "fastapi>=0.119.1",
    "pydantic-settings>=2.11.0",
    "ruff>=0.14.1",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
